Fixing cell overflow in the Admin UI list view

--- a/public/styles/keystone/list.less
+++ b/public/styles/keystone/list.less
@@ -283,4 +283,9 @@ table.items-list {
 		margin: @table-cell-padding;
 	}
 	
+	.col-value {
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+	
 }
